# w23-proj-comp371

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
assets/shaders/: actor.fragment.glsl  actor.vertex.glsl  frag_shader.glsl  grid.fragment.glsl  grid.vertex.glsl  light.fragment.glsl  light.vertex.glsl  skybox.fragment.glsl  skybox.vertex.glsl  vertex_shader.glsl
include/rendering/: actor.h  model.h  shader.h
include/window/: window.h
shaders/: base.frag  base.vert
src/: Zoom.h  main.cpp
src/Assets/: AssetManager.h  Font.cpp  Font.h  Material.cpp  Material.h  Model.cpp  Model.h  Models.h
src/Core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  EventData.h  Events.h  Logger.h  System.cpp  System.h  Utils.h
src/ECS/: Component.h  ECS.cpp  ECS.h
src/ECS/Components/: Color.h  GraphTexture.h  Mesh.h  Transform.h
src/Editor/: Editor.cpp  Editor.h  Widget.cpp  Widget.h
src/Editor/Widgets/: AssetsWidget.h  CreateEntityWidget.h  HierarchyWidget.h  LoadModelWidget.h  MenuBar.h  PropertiesWidget.h  SceneWidget.h  ShaderEditorWidget.h  ViewportWidget.h
src/Editor/Widgets/ShaderGraph/: ShaderGraphNode.h  ShaderGraphWidget.h
src/Editor/Widgets/ShaderGraph/Nodes/: CheckerboardShaderGraphNode.h  CheckerboardTextureNode.h  ColorNode.h  ColorShaderGraphNode.h  ConstantNode.h  ConstantShaderGraphNode.h  RegisterTextureNode.h
src/Gui/: Gui.cpp  Gui.h  Widget.h
src/Gui/Widgets/: AssetsWidget.h  MenuBar.h  PropertiesWidget.h  SceneWidget.h  ShaderEditorWidget.h  ViewportWidget.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Renderer/Modules/: Camera.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h
src/Systems/: System.h
src/Systems/Assets/: Font.cpp  Font.h
src/Systems/ECS/: ECS.cpp  ECS.h
src/Systems/ECS/Components/: Mesh.h  Transform.h
src/Systems/Gui/: Gui.cpp  Gui.h  Widget.h
src/Systems/Gui/Widgets/: AssetsWidget.h  PropertiesWidget.h  SceneWidget.h  ViewportWidget.h
src/Systems/Renderer/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h
src/Systems/Window/: Window.cpp  Window.h
src/Window/: Window.cpp  Window.h
src/core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  EventBus.cpp  EventBus.h  EventData.h  Events.h  Image.cpp  Image.h  Logger.h  System.cpp  System.h  SystemManager.h
src/engine/: Codes.h  Engine.cpp  Engine.h  SystemManager.h
src/gui/: Gui.cpp  Gui.h
src/rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  model.cpp  shader.cpp
src/systems/: Engine.cpp  Engine.h  Gui.cpp  Gui.h
src/window/: window.cpp
